--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -3,20 +3,22 @@
     <div class="panel-heading row chr_manager_dashboard__header">
       <span class="panel-title">Manager Absence Approval</span>
       <span class="pull-right">
-        <div class="chr_custom-select">
+        <div class="crm_custom-select">
           <select
             ng-options="types.title for types in ctrl.absenceTypes track by types.id"
             ng-model="ctrl.filters.leaveRequest.selectedAbsenceTypes"
             ng-change="ctrl.refresh()">
             <option value="">Leave Type</option>
           </select>
+          <span class="crm_custom-select__arrow"></span>
         </div>
-        <div class="chr_custom-select">
+        <div class="crm_custom-select">
           <select
             ng-options="period as ctrl.labelPeriod(period) for period in ctrl.absencePeriods track by period.id"
             ng-model="ctrl.filters.leaveRequest.selectedPeriod"
             ng-change="ctrl.refresh()">
           </select>
+          <span class="crm_custom-select__arrow"></span>
         </div>
         <span class="chr_manager_dashboard__filter pointer" ng-click="ctrl.isFilterExpanded = !ctrl.isFilterExpanded">
           <i class="fa"
@@ -39,37 +41,41 @@
           </ui-select-choices>
         </ui-select>
       </div>
-      <div class="chr_custom-select">
+      <div class="crm_custom-select">
         <select
           ng-options="region.value as region.label for region in ctrl.regions track by region.id"
           ng-model="ctrl.filters.contact.region"
           ng-change="ctrl.refresh(region)">
           <option value="">Region</option>
         </select>
+        <span class="crm_custom-select__arrow"></span>
       </div>
-      <div class="chr_custom-select">
+      <div class="crm_custom-select">
         <select
           ng-options="department.value as department.label for department in ctrl.departments track by department.id"
           ng-model="ctrl.filters.contact.department"
           ng-change="ctrl.refresh()">
           <option value="">Department</option>
         </select>
+        <span class="crm_custom-select__arrow"></span>
       </div>
-      <div class="chr_custom-select">
+      <div class="crm_custom-select">
         <select
           ng-options="levelType.value as levelType.value for levelType in ctrl.levelTypes track by levelType.id"
           ng-model="ctrl.filters.contact.level_type"
           ng-change="ctrl.refresh()">
           <option value="">Level Type</option>
         </select>
+        <span class="crm_custom-select__arrow"></span>
       </div>
-      <div class="chr_custom-select">
+      <div class="crm_custom-select">
         <select
           ng-options="location.value as location.label for location in ctrl.locations track by location.id"
           ng-model="ctrl.filters.contact.location"
           ng-change="ctrl.refresh()">
           <option value="">Locations</option>
         </select>
+        <span class="crm_custom-select__arrow"></span>
       </div>
       <div class="checkbox">
         <label>
