--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-calendar.html
@@ -15,12 +15,13 @@
             </ui-select>
           </div>
           <div class="col-sm-offset-1 col-sm-3">
-            <div class="chr_custom-select chr_custom-select--full">
+            <div class="crm_custom-select crm_custom-select--full">
               <select
                 ng-options="period as calendar.labelPeriod(period) for period in calendar.absencePeriods track by period.id"
                 ng-model="calendar.selectedPeriod"
                 ng-change="calendar.changeSelectedPeriod()">
               </select>
+              <span class="crm_custom-select__arrow"></span>
             </div>
           </div>
         </div>
