PCHR-2006: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-entitlements.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-entitlements.html
@@ -1,154 +1,103 @@
-<section class="panel panel-default panel-default-plain">
-  <header class="panel-heading">
-    <h2 class="panel-title">Contract Entitlements</h2>
-    <hr/>
-  </header>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Contract Entitlements</h3>
+  </div>
   <div class="table-responsive">
     <table class="table">
-      <tr>
-        <td>
-          <strong>Position</strong>
-        </td>
-        <td>
-          <strong>Start Date</strong>
-        </td>
-        <td>
-          <strong>End Date</strong>
-        </td>
-        <td>
-          <strong>Sick</strong>
-        </td>
-        <td>
-          <strong>Vacation</strong>
-        </td>
-        <td>
-          <strong>Marernity</strong>
-        </td>
-        <td>
-          <strong>Paternity</strong>
-        </td>
-        <td>
-          <strong>TOIL</strong>
-        </td>
-        <td>
-          <strong>TOIL (Credit)</strong>
-        </td>
-        <td>
-          <strong>Other</strong>
-        </td>
-      </tr>
-      <tr>
-        <td>Developer</td>
-        <td>01/01/2015</td>
-        <td>01/01/2016</td>
-        <td>20</td>
-        <td>30</td>
-        <td>40</td>
-        <td>20</td>
-        <td>30</td>
-        <td>40</td>
-        <td>20</td>
-      </tr>
-      <tr>
-        <td>Manager</td>
-        <td>01/01/2015</td>
-        <td></td>
-        <td>20</td>
-        <td>30</td>
-        <td>40</td>
-        <td>20</td>
-        <td>30</td>
-        <td>40</td>
-        <td>20</td>
-      </tr>
+      <thead>
+        <tr>
+          <th style="width:140px">Position</th>
+          <th>Start Date</th>
+          <th>End Date</th>
+          <th>Sick</th>
+          <th>Vacation</th>
+          <th>Marernity</th>
+          <th>Paternity</th>
+          <th>TOIL</th>
+          <th>TOIL (Credit)</th>
+          <th>Other</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Developer</td>
+          <td>01/01/2015</td>
+          <td>01/01/2016</td>
+          <td>20</td>
+          <td>30</td>
+          <td>40</td>
+          <td>20</td>
+          <td>30</td>
+          <td>40</td>
+          <td>20</td>
+        </tr>
+        <tr>
+          <td>Manager</td>
+          <td>01/01/2015</td>
+          <td></td>
+          <td>20</td>
+          <td>30</td>
+          <td>40</td>
+          <td>20</td>
+          <td>30</td>
+          <td>40</td>
+          <td>20</td>
+        </tr>
+      </tbody>
     </table>
   </div>
-</section>
+</div>
 
-<section class="panel panel-default panel-default-plain">
-  <header class="panel-heading">
-    <h2 class="panel-title">Annual Entitlements</h2>
-    <hr/>
-  </header>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Annual Entitlements</h3>
+  </div>
   <div class="table-responsive">
     <table class="table">
-      <tr>
-        <td>
-          <strong>Period</strong>
-        </td>
-        <td>
-          <strong>Sick</strong>
-        </td>
-        <td>
-          <strong>Vacation</strong>
-        </td>
-        <td>
-          <strong>Marernity</strong>
-        </td>
-        <td>
-          <strong>Paternity</strong>
-        </td>
-        <td>
-          <strong>TOIL</strong>
-        </td>
-        <td>
-          <strong>Other</strong>
-        <td></td>
-      </tr>
-      <tr>
-        <td>
-          2016
-          <i class="fa fa-clock-o text-primary" aria-hidden="true"></i>
-        </td>
-        <td>30</td>
-        <td>40</td>
-        <td>
-          50
-          <i class="fa fa-exclamation-circle text-danger" aria-hidden="true"></i>
-        </td>
-        <td>30</td>
-        <td>40</td>
-        <td>50</td>
-        <td>
-          <a href="#">Edit Entitlements</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          2015
-          <i class="fa fa-clock-o text-primary" aria-hidden="true"></i>
-        </td>
-        <td>30</td>
-        <td>40</td>
-        <td>
-          50
-          <i class="fa fa-exclamation-circle text-danger" aria-hidden="true"></i>
-        </td>
-        <td>30</td>
-        <td>40</td>
-        <td>50</td>
-        <td>
-          <a href="#">Edit Entitlements</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          2014
-          <i class="fa fa-clock-o text-primary" aria-hidden="true"></i>
-        </td>
-        <td>30</td>
-        <td>40</td>
-        <td>
-          50
-          <i class="fa fa-exclamation-circle text-danger" aria-hidden="true"></i>
-        </td>
-        <td>30</td>
-        <td>40</td>
-        <td>50</td>
-        <td>
-          <a href="#">Edit Entitlements</a>
-        </td>
-      </tr>
+      <thead>
+        <tr>
+          <th style="width:130px">Period</th>
+          <th>Sick</th>
+          <th>Vacation</th>
+          <th>Marernity</th>
+          <th>Paternity</th>
+          <th>TOIL</th>
+          <th>Other</th>
+          <th style="width:150px"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2016 <i class="fa fa-clock-o text-primary" aria-hidden="true"></i></td>
+          <td>30</td>
+          <td>40</td>
+          <td>50 <i class="fa fa-exclamation-circle text-danger" aria-hidden="true"></i></td>
+          <td>30</td>
+          <td>40</td>
+          <td>50</td>
+          <td><a href="#">Edit Entitlements</a></td>
+        </tr>
+        <tr>
+          <td>2015 <i class="fa fa-clock-o text-primary" aria-hidden="true"></i></td>
+          <td>30</td>
+          <td>40</td>
+          <td>50 <i class="fa fa-exclamation-circle text-danger" aria-hidden="true"></i></td>
+          <td>30</td>
+          <td>40</td>
+          <td>50</td>
+          <td><a href="#">Edit Entitlements</a></td>
+        </tr>
+        <tr>
+          <td>2014 <i class="fa fa-clock-o text-primary" aria-hidden="true"></i></td>
+          <td>30</td>
+          <td>40</td>
+          <td>50 <i class="fa fa-exclamation-circle text-danger" aria-hidden="true"></i></td>
+          <td>30</td>
+          <td>40</td>
+          <td>50</td>
+          <td><a href="#">Edit Entitlements</a></td>
+        </tr>
+      </tbody>
     </table>
   </div>
-</section>
+</div>
