--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -1,5 +1,5 @@
 <div class="absence-tab-page">
-  <div class="container">
+  <div class="container-fluid">
     <div class="btn-group">
       <button type="button" class="btn btn-info">create new</button>
       <button
