--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
@@ -1,5 +1,5 @@
 <div class="btn-group">
-  <button type="button" class="btn btn-info">
+  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#workPatternModal">
     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ADD CUSTOM WORK PATTERN
   </button>
 </div>
@@ -54,3 +54,73 @@
   </tr>
   </tbody>
 </table>
+
+
+<!-- Modal -->
+<div class="modal fade" id="workPatternModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h2 class="modal-title" id="myModalLabel">Custom Work Pattern</h2>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-sm-12">
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label class="col-sm-4 control-label required-mark">Effective Form Date</label>
+                <div class="col-sm-4">
+                  <div class="input-group">
+                    <input type="text" class="form-control">
+                    <span class="input-group-addon">
+                      <i class="fa fa-calendar"></i>
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-4 control-label required-mark">Work Pattern</label>
+                <div class="col-sm-8">
+                  <div class="crm_custom-select crm_custom-select--full">
+                    <select>
+                      <option value="">Compressed hours 40h - Mon to Thurs</option>
+                    </select>
+                    <span class="crm_custom-select__arrow"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-12 control-label">Description</label>
+                <div class="col-sm-12">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus vehicula lacinia. Curabitur sed
+                  felis faucibus, tempus nibh vel, aliquam orci. Vestibulum laoreet, ex sit amet commodo dignissim, arcu
+                  ligula feugiat eros, sit amet facilisis dui neque eget lacus. Integer elementum enim quis eleifend
+                  feugiat. Pellentesque vel nisi turpis. Praesent non blandit magna. Nam rutrum, eros nec blandit
+                  tincidunt, eros arcu consectetur ex, scelerisque imperdiet nulla tellus non purus.
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-4 control-label">Reason for change</label>
+                <div class="col-sm-8">
+                  <div class="crm_custom-select crm_custom-select--full">
+                    <select>
+                      <option value="">-select-</option>
+                    </select>
+                    <span class="crm_custom-select__arrow"></span>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary-outline pull-left" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
