PCHR-2322: Fix Header styles for Modal

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
@@ -1,5 +1,9 @@
 $row-margin-bottom: 15px;
 
+.chr_leave-request-modal .modal-title{
+  font-size: 18px !important;
+}
+
 .chr_leave-request-modal__chevron {
   font-size: 0.6em;
   vertical-align: middle;
