PCHR-2322: Style fixes

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_absence-tab-page.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_absence-tab-page.scss
@@ -2,6 +2,10 @@
 
   .btn-group {
     margin-bottom: 20px;
+
+    > .btn {
+      border-color: transparent !important;
+    }
   }
 
   .tab-pane {
