--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
@@ -1,5 +1,5 @@
 <div class="btn-group">
-  <button type="button" class="btn btn-info" ng-click="workpatterns.open()">
+  <button type="button" class="btn btn-info" ng-click="workpatterns.openModal()">
     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ADD CUSTOM WORK PATTERN
   </button>
 </div>
