PCHR-2007: Add contract entitlements component

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-entitlements.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-entitlements.html
@@ -1,52 +1,4 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Contract Entitlements</h3>
-  </div>
-  <div class="table-responsive">
-    <table class="table">
-      <thead>
-        <tr>
-          <th style="width:140px">Position</th>
-          <th>Start Date</th>
-          <th>End Date</th>
-          <th>Sick</th>
-          <th>Vacation</th>
-          <th>Marernity</th>
-          <th>Paternity</th>
-          <th>TOIL</th>
-          <th>TOIL (Credit)</th>
-          <th>Other</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Developer</td>
-          <td>01/01/2015</td>
-          <td>01/01/2016</td>
-          <td>20</td>
-          <td>30</td>
-          <td>40</td>
-          <td>20</td>
-          <td>30</td>
-          <td>40</td>
-          <td>20</td>
-        </tr>
-        <tr>
-          <td>Manager</td>
-          <td>01/01/2015</td>
-          <td></td>
-          <td>20</td>
-          <td>30</td>
-          <td>40</td>
-          <td>20</td>
-          <td>30</td>
-          <td>40</td>
-          <td>20</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+<contract-entitlements contact-id="entitlements.contactId"></contract-entitlements>
 
 <div class="panel panel-default">
   <div class="panel-heading">
