--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -1,5 +1,5 @@
 <div class="absence-tab-page">
-  <div class="container-fluid">
+  <div class="container">
     <div class="btn-group">
       <button type="button" class="btn btn-info">create new</button>
       <button
@@ -29,7 +29,7 @@
         <staff-leave-calendar ng-if="active === 1" contact-id="$root.settings.contactId"></staff-leave-calendar>
       </uib-tab>
       <uib-tab heading="Entitlements">
-        <absence-tab-entitlements ng-if="active === 2" ></absence-tab-entitlements>
+        <absence-tab-entitlements ng-if="active === 2" contact-id="$root.settings.contactId"></absence-tab-entitlements>
       </uib-tab>
       <uib-tab heading="Work Patterns">
         <absence-tab-work-patterns ng-if="active === 3" ></absence-tab-work-patterns>
