--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-entitlements.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-entitlements.html
@@ -1,55 +1,2 @@
 <contract-entitlements contact-id="entitlements.contactId"></contract-entitlements>
-
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Annual Entitlements</h3>
-  </div>
-  <div class="table-responsive">
-    <table class="table">
-      <thead>
-        <tr>
-          <th style="width:130px">Period</th>
-          <th>Sick</th>
-          <th>Vacation</th>
-          <th>Marernity</th>
-          <th>Paternity</th>
-          <th>TOIL</th>
-          <th>Other</th>
-          <th style="width:150px"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2016 <i class="fa fa-clock-o text-primary" aria-hidden="true"></i></td>
-          <td>30</td>
-          <td>40</td>
-          <td>50 <i class="fa fa-exclamation-circle text-danger" aria-hidden="true"></i></td>
-          <td>30</td>
-          <td>40</td>
-          <td>50</td>
-          <td><a href="#">Edit Entitlements</a></td>
-        </tr>
-        <tr>
-          <td>2015 <i class="fa fa-clock-o text-primary" aria-hidden="true"></i></td>
-          <td>30</td>
-          <td>40</td>
-          <td>50 <i class="fa fa-exclamation-circle text-danger" aria-hidden="true"></i></td>
-          <td>30</td>
-          <td>40</td>
-          <td>50</td>
-          <td><a href="#">Edit Entitlements</a></td>
-        </tr>
-        <tr>
-          <td>2014 <i class="fa fa-clock-o text-primary" aria-hidden="true"></i></td>
-          <td>30</td>
-          <td>40</td>
-          <td>50 <i class="fa fa-exclamation-circle text-danger" aria-hidden="true"></i></td>
-          <td>30</td>
-          <td>40</td>
-          <td>50</td>
-          <td><a href="#">Edit Entitlements</a></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+<annual-entitlements contact-id="entitlements.contactId"></annual-entitlements>
