--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-work-patterns.html
@@ -4,53 +4,42 @@
   </button>
 </div>
 
-<table class="table table-transparent">
-  <thead>
-  <tr>
-    <th>Default Work Pattern</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td>Compressed hours 40h - Mon to Thurs</td>
-  </tr>
-  </tbody>
-</table>
-
-<br><br>
-
-<table class="table table-clean">
-  <thead>
-  <tr>
-    <th>
-      Custom Work Patterns
-      <span class="glyphicon glyphicon-cog text-primary" aria-hidden="true"></span>
-    </th>
-    <th>Effective Date</th>
-    <th>Reason For Change</th>
-    <th class="text-center">Action</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td style="width: 30%;">Compressed hours 40h - Mon to Thurs</td>
-    <td style="width: 15%;">01/02/2015</td>
-    <td style="width: 45%;">Moved to a new country</td>
-    <td style="width: 10%;" class="text-center">
-      <a href="#" class="text-danger">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
-      </a>
-    </td>
-  </tr>
-  <tr>
-    <td style="width: 30%;">Compressed hours 40h - Mon to Thurs</td>
-    <td style="width: 15%;">01/02/2015</td>
-    <td style="width: 45%;">Moved to a new country</td>
-    <td style="width: 10%;" class="text-center">
-      <a href="#" class="text-danger">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
-      </a>
-    </td>
-  </tr>
-  </tbody>
-</table>
+<crm-loading show="!workpatterns.loading">
+  <table ng-show="workpatterns.defaultWorkPattern" class="table table-transparent">
+    <thead>
+    <tr>
+      <th>Default Work Pattern</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>{{workpatterns.defaultWorkPattern.label}} - {{workpatterns.defaultWorkPattern.description}}</td>
+    </tr>
+    </tbody>
+  </table>
+  <table ng-show="!workpatterns.defaultWorkPattern" class="table table-clean">
+    <thead>
+    <tr>
+      <th>
+        Custom Work Patterns
+        <span class="glyphicon glyphicon-cog text-primary" aria-hidden="true"></span>
+      </th>
+      <th>Effective Date</th>
+      <th>Reason For Change</th>
+      <th class="text-center">Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="pattern in workpatterns.customWorkpattern">
+      <td style="width: 40%;">{{pattern.workPattern.label}} - {{pattern.workPattern.description}}</td>
+      <td style="width: 15%;">{{pattern.effective_date}}</td>
+      <td style="width: 35%;">{{pattern.change_reason}}</td>
+      <td style="width: 10%;" class="text-center">
+        <a href="#" class="text-danger" ng-click="workpatterns.deleteWorkPattern(pattern.id)">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
+        </a>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</crm-loading>
