--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -22,17 +22,17 @@
       active="active"
       type="pills"
       custom-header-class="nav-pills-horizontal nav-pills-horizontal-default">
-      <uib-tab heading="Report">
-        <absence-tab-report ng-if="active === 0" ></absence-tab-report>
+      <uib-tab heading="Report" data-tabname="report">
+        <absence-tab-report ng-if="active === 0" data-tabname="report"></absence-tab-report>
       </uib-tab>
-      <uib-tab heading="Calendar">
-        <staff-leave-calendar ng-if="active === 1" contact-id="$root.settings.contactId"></staff-leave-calendar>
+      <uib-tab heading="Calendar" data-tabname="calendar">
+        <staff-leave-calendar ng-if="active === 1" contact-id="$root.settings.contactId" data-tabname="calendar"></staff-leave-calendar>
       </uib-tab>
-      <uib-tab heading="Entitlements">
-        <absence-tab-entitlements ng-if="active === 2" contact-id="$root.settings.contactId"></absence-tab-entitlements>
+      <uib-tab heading="Entitlements" data-tabname="entitlements">
+        <absence-tab-entitlements ng-if="active === 2" contact-id="$root.settings.contactId" data-tabname="entitlements"></absence-tab-entitlements>
       </uib-tab>
-      <uib-tab heading="Work Patterns">
-        <absence-tab-work-patterns ng-if="active === 3" ></absence-tab-work-patterns>
+      <uib-tab heading="Work Patterns" data-tabname="workpattenrs">
+        <absence-tab-work-patterns ng-if="active === 3" data-tabname="workpatterns"></absence-tab-work-patterns>
       </uib-tab>
     </uib-tabset>
   </div>
