PCHR-2016: WorkPattern Modal

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_absence-work-patterns.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_absence-work-patterns.scss
@@ -19,3 +19,7 @@
 .chr_absence-work-pattern__work-pattern-listing {
   display: inline-block;
 }
+
+.chr_absence-work-pattern__alert {
+  margin-bottom: 0 !important;
+}
