--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -32,7 +32,7 @@
         <absence-tab-entitlements ng-if="active === 2" contact-id="$root.settings.contactId" data-tabname="entitlements"></absence-tab-entitlements>
       </uib-tab>
       <uib-tab heading="Work Patterns" data-tabname="workpattenrs">
-        <absence-tab-work-patterns ng-if="active === 3" data-tabname="workpatterns"></absence-tab-work-patterns>
+        <absence-tab-work-patterns ng-if="active === 3" contact-id="$root.settings.contactId" data-tabname="workpatterns"></absence-tab-work-patterns>
       </uib-tab>
     </uib-tabset>
   </div>
