--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-custom-work-pattern-modal.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-custom-work-pattern-modal.html
@@ -1,61 +1,93 @@
 <div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="workPatternModal.closeModal()">
     <span aria-hidden="true">&times;</span>
   </button>
   <h2 class="modal-title" id="myModalLabel">Custom Work Pattern</h2>
 </div>
-<div class="modal-body">
-  <div class="row">
-    <div class="col-sm-12">
-      <form class="form-horizontal">
-        <div class="form-group">
-          <label class="col-sm-4 control-label required-mark">Effective Form Date</label>
-          <div class="col-sm-4">
-            <div class="input-group">
-              <input type="text" class="form-control">
-              <span class="input-group-addon">
-                <i class="fa fa-calendar"></i>
-              </span>
+<crm-loading show="!workPatternModal.loading.content">
+  <div class="modal-body">
+    <div class="row">
+      <div class="col-sm-12">
+        <form class="form-horizontal">
+          <div class="form-group">
+            <label class="col-sm-4 control-label required-mark">Effective Form Date</label>
+            <div class="col-sm-4">
+              <div class="input-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  uib-datepicker-popup
+                  show-button-bar="false"
+                  datepicker-options="workPatternModal.uiOptions.effectiveDate.options"
+                  ng-model="workPatternModal.selected.effectiveDate"
+                  is-open="workPatternModal.uiOptions.effectiveDate.show">
+                <span
+                  class="input-group-addon pointer"
+                  ng-click="workPatternModal.uiOptions.effectiveDate.show = true">
+                  <i class="fa fa-calendar"></i>
+                </span>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-4 control-label required-mark">Work Pattern</label>
-          <div class="col-sm-8">
-            <div class="crm_custom-select crm_custom-select--full">
-              <select>
-                <option value="">Compressed hours 40h - Mon to Thurs</option>
-              </select>
-              <span class="crm_custom-select__arrow"></span>
+          <div class="form-group">
+            <label class="col-sm-4 control-label required-mark">Work Pattern</label>
+            <div class="col-sm-8">
+              <div class="crm_custom-select crm_custom-select--full">
+                <select
+                  ng-options="workPatterns.id as workPatterns.label for workPatterns in workPatternModal.workPatterns"
+                  ng-model="workPatternModal.selected.workPattern"
+                  ng-change="workPatternModal.refresh()">
+                  <option value="">- select -</option>
+                </select>
+                <span class="crm_custom-select__arrow"></span>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-12 control-label">Description</label>
-          <div class="col-sm-12">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus vehicula lacinia. Curabitur sed
-            felis faucibus, tempus nibh vel, aliquam orci. Vestibulum laoreet, ex sit amet commodo dignissim, arcu
-            ligula feugiat eros, sit amet facilisis dui neque eget lacus. Integer elementum enim quis eleifend
-            feugiat. Pellentesque vel nisi turpis. Praesent non blandit magna. Nam rutrum, eros nec blandit
-            tincidunt, eros arcu consectetur ex, scelerisque imperdiet nulla tellus non purus.
+          <div class="form-group" ng-show="workPatternModal.selected.workPattern.description">
+            <label class="col-sm-12 control-label">Description</label>
+            <div class="col-sm-12">{{workPatternModal.selected.workPattern.description}}</div>
           </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-4 control-label">Reason for change</label>
-          <div class="col-sm-8">
-            <div class="crm_custom-select crm_custom-select--full">
-              <select>
-                <option value="">-select-</option>
-              </select>
-              <span class="crm_custom-select__arrow"></span>
+          <div class="form-group">
+            <label class="col-sm-4 control-label">Reason for change</label>
+            <div class="col-sm-8">
+              <div class="crm_custom-select crm_custom-select--full">
+                <select
+                  ng-options="changeReasons.value as changeReasons.label for changeReasons in workPatternModal.changeReasons"
+                  ng-model="workPatternModal.selected.changeReason"
+                  ng-change="workPatternModal.refresh()">
+                  <option value="">- select -</option>
+                </select>
+                <span class="crm_custom-select__arrow"></span>
+              </div>
             </div>
           </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
   </div>
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-secondary-outline pull-left" data-dismiss="modal">Cancel</button>
-  <button type="button" class="btn btn-primary">Save</button>
-</div>
+
+  <div
+    class="chr_absence-work-pattern__alert"
+    ng-if="workPatternModal.errorMessage"
+    uib-alert
+    type="danger"
+    close="workPatternModal.closeAlert()"
+    dismiss-on-timeout="5000">
+    <div>{{workPatternModal.errorMessage}}</div>
+  </div>
+
+  <crm-loading show="!workPatternModal.saveInProgress">
+    <div class="modal-footer">
+      <button
+        type="button" class="btn btn-secondary-outline pull-left"
+        data-dismiss="modal" ng-click="workPatternModal.closeModal()">
+        Cancel
+      </button>
+      <button
+        type="button" class="btn btn-primary" ng-click="workPatternModal.save()"
+        ng-disabled="!(workPatternModal.selected.workPattern && workPatternModal.selected.effectiveDate)">
+        Save
+      </button>
+    </div>
+  </crm-loading>
+</crm-loading>
