PCHR-2148: Augment leave request directive

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12 form-horizontal">
   <hr>
     <div class="form-group">
-      <label class="col-xs-4 control-label">Reason<i class="fa fa-asterisk"></i></label>
+      <label class="col-xs-4 control-label required-mark">Reason</label>
       <div class="col-xs-8">
         <div class="crm_custom-select crm_custom-select--full">
           <select
